landing page clean up

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <!--Import Google Icon Font-->
         <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Arima+Madurai" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Amaranth" rel="stylesheet">
@@ -43,9 +44,9 @@
         <!-- End of mobile nav -->
 
 <!-- Intro Part -->
-<div class="container home">
+<div class="home">
     <div class="center-align">
-            <h3 class="center-flex">The Superfast PHP Framework</h3>
+            <h4 class="slogan center-flex">The Superfast PHP Framework</h4>
             <div class="center-flex">
                  <a href="" class="btn codefii-color z-depth-3">Get started</a>
                  <a href="" class="btn codefii-color z-depth-3">Download</a>
@@ -71,18 +72,18 @@
         <div class="row">
             <div class="col-margin col s12 m4 center-align">
                 <img src="./images/performance.png" class="max-width stable-img">
-                <h3 class="section-title is-3">Performance</h3>
+                <h3 class="section-title white-text">Performance</h3>
                 <p class="medium white-text">Non-blocking, event-driven architecture built on top of Apple's SwiftNIO delivers high performance.</p>
             </div>
             <div class="col-margin col s12 m4 center-align">
                 <img src="./images/phplogo.svg" class="max-width stable-img">
-                <h3 class="section-title is-3">Popularity</h3>
+                <h3 class="section-title is-3 white-text">Popularity</h3>
                 <p class="medium white-text">Written in PHP, the world most popular and widely used server side scripting language
                 </p>
             </div>
             <div class="col-margin col s12 m4 center-align">
                 <img src="./images/admin.svg" class="max-width stable-img">
-                <h3 class="section-title is-3">Syrah Admin</h3>
+                <h3 class="section-title white-text">Syrah Admin</h3>
                 <p class="medium white-text">Syrah is a collection of packages which allows you to manage models quickly. 
                     It provides a set of
                 useful packages  that will make the process of creating a highly customizable admin panel
