sidebar and landing page clean up

--- a/documentation.html
+++ b/documentation.html
@@ -35,6 +35,7 @@
     
             <ul id="slide-out" class="sidenav sidenav-fixed">
                <div class="container">
+                    <div class="center-align spacing-2 hide-on-med-and-up"><a href="#" class="brand-logo"><img class="brand-img" src="images/codefii.png"></a></div>
                   <div class="center-align"><form action="" class="input-field"><input class="input-field" type="text" placeholder="search"></form></div>
                     <div class="section-container">
                             <h5 class="section-heading">Getting Started</h6>
@@ -650,6 +651,14 @@ use Codefii\Http\Response;
 </div>
       </main>
  <!-- footer -->
+
+ <footer class="page-footer black">     
+        <div class="container">
+        2019 &copy; Designed By Runo
+         <a href="#"><img src="./images/codefii.png" class="footer-img" alt=""></a>
+        </div>
+      </footer>
+
      
 
         <!-- end footer-->
