--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
        <!-- Mobile navigation -->
        <ul id="slide-out" class="sidenav">
          <div class="container">
+            <div class="center-align spacing-2"><a href="#" class="brand-logo"><img class="brand-img" src="images/codefii.png"></a></div>
             <li class="center-align"><form action="" class="input-field"><input class="input-field" type="text" placeholder="search"></form></li>
             <li><a class="black-text" href="documentation.html">Documentation</a></li>
             <li><a class="black-text" href="">News</a></li>
@@ -44,6 +45,7 @@
         <!-- End of mobile nav -->
 
 <!-- Intro Part -->
+<div class="showcase-area">
 <div class="home">
     <div class="center-align">
             <h4 class="slogan center-flex">The Superfast PHP Framework</h4>
@@ -54,15 +56,16 @@
     </div>
 </div>
 
-
-<section class="codefii center-align">
+<div class="codefii center-align">
 <div class="container size">
    <picture>
        <source srcset="./images/codefii_big.png" media="(min-width:800px)">
-       <img src="./images/codefii_small.png" alt="">
+       <img src="./images/codefii_big.png" alt="">
    </picture>
 </div>
-</section> 
+</div> 
+
+</div>
    
    
 
