--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <div class="center-align">
             <h4 class="slogan center-flex">The Superfast PHP Framework</h4>
             <div class="center-flex">
-                 <a href="" class="btn codefii-color z-depth-3">Get started</a>
-                 <a href="" class="btn codefii-color z-depth-3">Download</a>
+                 <a href="" class="btn codefii-color waves-effect waves-light z-depth-3">Get started</a>
+                 <a href="" class="btn codefii-color waves-effect waves-light z-depth-3">Download</a>
             </div>
     </div>
 </div>
@@ -60,7 +60,7 @@
 <div class="container size">
    <picture>
        <source srcset="./images/codefii_big.png" media="(min-width:800px)">
-       <img src="./images/codefii_big.png" alt="">
+       <img class="z-depth-4" src="./images/codefii_big.png" alt="">
    </picture>
 </div>
 </div> 
@@ -76,6 +76,7 @@
             <div class="col-margin col s12 m4 center-align">
                 <img src="./images/performance.png" class="max-width stable-img">
                 <h3 class="section-title white-text">Performance</h3>
+                <hr class="hr-style">
                 <p class="medium white-text">Non-blocking, event-driven architecture built on top of Apple's SwiftNIO delivers high performance.</p>
             </div>
             <div class="col-margin col s12 m4 center-align">
