font changes, welcome page changes, and collapsible nav

--- a/index.html
+++ b/index.html
@@ -2,17 +2,14 @@
 <html>
 
     <head>
-        <!--Import Google Icon Font-->
+            <meta name="theme-color" content="rgb(237, 47, 89)">
         <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Arima+Madurai" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Amaranth" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Lato|Thasadith" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Thasadith" rel="stylesheet">
         <!--Import materialize.css-->
         <link rel="stylesheet" href="css/materialize.css">
         <link rel="stylesheet" href="css/app.css">
-        <link rel="stylesheet" href="css/ionicons.css">
         <link rel="stylesheet" href="css/prism.css">
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -48,6 +45,7 @@
 <div class="showcase-area">
 <div class="home">
     <div class="center-align">
+            <img src="./images/codefii.png" class="showcase-img" alt="">
             <h4 class="slogan center-flex">The Superfast PHP Framework</h4>
             <div class="center-flex">
                  <a href="" class="btn codefii-color waves-effect waves-light z-depth-3">Get started</a>
@@ -60,7 +58,7 @@
 <div class="container size">
    <picture>
        <source srcset="./images/codefii_big.png" media="(min-width:800px)">
-       <img class="z-depth-4" src="./images/codefii_big.png" alt="">
+       <img class="z-depth-5" src="./images/codefii_big.png" alt="">
    </picture>
 </div>
 </div> 
@@ -69,25 +67,29 @@
    
    
 
+
+
 <div class="codefii_info black section-spacing">
 
     <div class="container">
         <div class="row">
             <div class="col-margin col s12 m4 center-align">
                 <img src="./images/performance.png" class="max-width stable-img">
-                <h3 class="section-title white-text">Performance</h3>
-                <hr class="hr-style">
+            <h3 class="section-title white-text">Performance</h3>
+            <div class="hr-style"></div>
                 <p class="medium white-text">Non-blocking, event-driven architecture built on top of Apple's SwiftNIO delivers high performance.</p>
             </div>
             <div class="col-margin col s12 m4 center-align">
                 <img src="./images/phplogo.svg" class="max-width stable-img">
                 <h3 class="section-title is-3 white-text">Popularity</h3>
+                <div class="hr-style"></div>
                 <p class="medium white-text">Written in PHP, the world most popular and widely used server side scripting language
                 </p>
             </div>
             <div class="col-margin col s12 m4 center-align">
                 <img src="./images/admin.svg" class="max-width stable-img">
                 <h3 class="section-title white-text">Syrah Admin</h3>
+                <div class="hr-style"></div>
                 <p class="medium white-text">Syrah is a collection of packages which allows you to manage models quickly. 
                     It provides a set of
                 useful packages  that will make the process of creating a highly customizable admin panel
@@ -101,22 +103,22 @@
         </div>
          <div class="row center-align package-list">
              <div class="col s12 m4 center-align package">
-                <h3 class="section-title white-text is-4">Http Middleware</h3>
+                <h3 class="section-title white-text is-4">Http Middleware <span class="done-icon"><i class="material-icons done">check_circle</i></span></h3>
              </div>
              <div class="col s12 m4 center-align package">
-                <h3 class="section-title white-text is-4">Syrah Admin</h3>
+                <h3 class="section-title white-text is-4">Syrah Admin <span class="done-icon"><i class="material-icons done">check_circle</i></span></h3>
              </div>
              <div class="col s12 m4 center-align package">
-                <h3 class="section-title white-text is-4">Silp</h3>
+                <h3 class="section-title white-text is-4">Silp <span class="done-icon"><i class="material-icons done">check_circle</i></span></h3>
              </div>
              <div class="col s12 m4 center-align package">
-                <h3 class="section-title white-text is-4">Auth</h3>
+                <h3 class="section-title white-text is-4">Auth <span class="done-icon"><i class="material-icons done">check_circle</i></span></h3>
              </div>
              <div class="col s12 m4 center-align package">
-                <h3 class="section-title white-text is-4">MySQL</h3>
+                <h3 class="section-title white-text is-4">MySQL <span class="done-icon"><i class="material-icons done">check_circle</i></span></h3>
              </div>
              <div class="col s12 m4 center-align package">
-                <h3 class="section-title white-text is-4">PostgreSQL</h3>
+                <h3 class="section-title white-text is-4">PostgreSQL <span class="done-icon"><i class="material-icons done">check_circle</i></span></h3>
              </div>
          </div>
 
